Bug fix: layout problem of searchbox

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -73,7 +73,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-basis: 10%;
+    flex-basis: 11%;
     background-color: var(--color-black);
     border: none;
     border-radius: 0 calc(var(--radius-tiny) * 1.5)
